@@ -1,17 +1,20 @@
 Package: modeltools
 Title: Tools and Classes for Statistical Models
-Date: 2008-10-01
-Version: 0.2-16
-Author: Torsten Hothorn, Friedrich Leisch, Achim Zeileis 
+Date: 2010-09-13
+Version: 0.2-17
+Author: Torsten Hothorn, Friedrich Leisch, Achim Zeileis
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
-Description: A collection of tools to deal with statistical models. 
-  The functionality is experimental and the user interface is likely to
-  change in the future. The documentation is rather terse, but packages `coin'
-  and `party' have some working examples. However, if you find the
-  implemented ideas interesting we would be very interested in a discussion
-  of this proposal. Contributions are more than welcome!
+Description: A collection of tools to deal with statistical models. The
+        functionality is experimental and the user interface is likely
+        to change in the future. The documentation is rather terse, but
+        packages `coin' and `party' have some working examples.
+        However, if you find the implemented ideas interesting we would
+        be very interested in a discussion of this proposal.
+        Contributions are more than welcome!
 Depends: stats, stats4
 Imports: methods
 LazyLoad: yes
 License: GPL-2
-Packaged: Wed Oct  1 15:13:45 2008; leisch
+Packaged: 2010-09-13 16:24:32 UTC; zeileis
+Repository: CRAN
+Date/Publication: 2010-09-13 16:29:15
