@@ -1,26 +1,0 @@
-
-R version 2.4.0 Under development (unstable) (2006-08-22 r38955)
-Copyright (C) 2006 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
-
-R is free software and comes with ABSOLUTELY NO WARRANTY.
-You are welcome to redistribute it under certain conditions.
-Type 'license()' or 'licence()' for distribution details.
-
-R is a collaborative project with many contributors.
-Type 'contributors()' for more information and
-'citation()' on how to cite R or R packages in publications.
-
-Type 'demo()' for some demos, 'help()' for on-line help, or
-'help.start()' for an HTML browser interface to help.
-Type 'q()' to quit R.
-
-> 
-> ### check potential coding problems via `codetools'
-> if (require("codetools")) {
-+     library("modeltools")
-+     print(checkUsagePackage("modeltools"))
-+ }
-Loading required package: codetools
-NULL
-> 
