@@ -72,3 +72,6 @@ stopifnot(nrow(menv@get("input", data = iris)) == 150)
 stopifnot(!empty(menv))
 menv1 <- new("ModelEnv")
 stopifnot(empty(menv1))
+
+### fixed in 0.2-17
+dpp(linearModel, Sepal.Length ~ 1, data = iris, na.action = na.omit)
