@@ -1,5 +1,10 @@
 CHANGES IN `modeltools' VERSION 0.2-16
 
+  o inputs make be NULL (in complete.cases.*)
+
+
+CHANGES IN `modeltools' VERSION 0.2-16
+
   o new generic `relabel'
 
 
